--- a/javautil-7/javautil-condition-identification/pom.xml
+++ b/javautil-7/javautil-condition-identification/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<artifactId>javautil-pom</artifactId>
 		<groupId>org.javautil</groupId>
-		<version>VER-7.4.0</version>
+		<version>8.6.21</version>
 		<relativePath>../javautil-pom</relativePath>
 	</parent>
 
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.javautil</groupId>
 			<artifactId>javautil-core</artifactId>
-			<version>VER-7.4.0</version>
+			<version>8.6.21</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javautil</groupId>
