--- a/javautil-7/javautil-core/pom.xml
+++ b/javautil-7/javautil-core/pom.xml
@@ -20,7 +20,7 @@
 			<url>https://www.gnu.org/licenses/gpl-2.0.txt</url>
 		</license>
 	</licenses>
-  
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -108,11 +108,8 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<!-- TODO unify across p<dependency>
-    <groupId>javax.xml.bind</groupId>
-    <artifactId>jaxb-api</artifactId>
-    <version>2.3.1</version>
-</dependency>rojects -->
+		<!-- TODO unify across p<dependency> <groupId>javax.xml.bind</groupId> 
+			<artifactId>jaxb-api</artifactId> <version>2.3.1</version> </dependency>rojects -->
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>oracle-jdbc8</artifactId>
@@ -172,19 +169,21 @@
 			<scope>test</scope>
 		</dependency>
 
-<!--  afer jdk 1.8 you need these  -->
-<!--  https://www.jesperdj.com/2018/09/30/jaxb-on-java-9-10-11-and-beyond/ -->
-<dependency>
-    <groupId>javax.xml.bind</groupId>
-    <artifactId>jaxb-api</artifactId>
-    <version>2.3.1</version>
-</dependency>
-<dependency>
-    <groupId>org.glassfish.jaxb</groupId>
-    <artifactId>jaxb-runtime</artifactId>
-    <version>2.3.1</version>
-    <scope>runtime</scope>
-</dependency>
+		<!-- afer jdk 1.8 you need these -->
+		<!-- https://www.jesperdj.com/2018/09/30/jaxb-on-java-9-10-11-and-beyond/ -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.1</version>
+			<scope>runtime</scope>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
