--- a/diamond/diamond-aps/bin/.settings/org.eclipse.jdt.core.prefs
+++ b/diamond/diamond-aps/bin/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
-#Sun May 12 18:03:52 EEST 2019
+#Sun Jun 28 10:15:09 CDT 2020
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
-eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.source=1.8
+eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.compliance=1.8
