Eliminated oracle dependency

--- a/diamond/diamond-aps/src/test/resources/application.properties
+++ b/diamond/diamond-aps/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/aps19?currentSchema=aerodemo
+spring.datasource.url=jdbc:postgresql://localhost/integration_postgres?currentSchema=aerodemo
 spring.datasource.username=jjs
 spring.datasource.password=jjs
 spring.datasource.driver-class-name=org.postgresql.Driver
