--- a/javautil-7/javautil-poi/.settings/org.eclipse.jdt.core.prefs
+++ b/javautil-7/javautil-poi/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,5 @@
+#Mon Jun 29 13:55:53 CDT 2020
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
+org.eclipse.jdt.core.compiler.source=1.8
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=12
-org.eclipse.jdt.core.compiler.compliance=12
-org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures=disabled
-org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
-org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures=ignore
-org.eclipse.jdt.core.compiler.release=disabled
-org.eclipse.jdt.core.compiler.source=12
+org.eclipse.jdt.core.compiler.compliance=1.8
