--- a/javautil-7/javautil-pom/pom.xml
+++ b/javautil-7/javautil-pom/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.javautil</groupId>
@@ -14,10 +15,10 @@
 	<modules>
 		<module>../javautil-commandline</module>
 		<module>../javautil-core</module>
-		<module>../javautil-hibernate</module> 
+		<module>../javautil-hibernate</module>
 		<module>../javautil-joblog</module>
-		<module>../javautil-condition-identification</module> 
-		<module>../javautil-poi</module>      
+		<module>../javautil-condition-identification</module>
+		<module>../javautil-poi</module>
 		<module>../javautil-test</module>
 		<module>../javautil-oracle-trace</module>
 		<!-- <module>../javautil-cli</module> -->
@@ -26,8 +27,11 @@
 	<!-- maven dependencies -->
 	<!-- maven versions:display-dependency-updates -->
 
+
+
 	<dependencies>
-		<!-- We are using java 5 or better, xerces conflicts with java provided classes in some Spring tests -->
+		<!-- We are using java 5 or better, xerces conflicts with java provided 
+			classes in some Spring tests -->
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
@@ -55,6 +59,9 @@
 	</dependencies>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
 		<!-- test requiring an oracle instance -->
 		<skip.oracle.test>true</skip.oracle.test>
 		<!-- -->
@@ -70,7 +77,7 @@
 		<gson.version>1.3</gson.version>
 		<hibernate.version>3.2.3.GA</hibernate.version> <!-- 5.4.1.Final -->
 		<HikariCP.version>3.4.1</HikariCP.version>
-        <jackson.version>2.10.1</jackson.version>
+		<jackson.version>2.10.1</jackson.version>
 		<javassist.version>3.12.1.GA</javassist.version>
 		<javax.mail.version>1.4.1</javax.mail.version>
 		<javax.servlet.version>2.5</javax.servlet.version>
@@ -109,25 +116,25 @@
 		<!-- <org.springframework.security>2.0.4</org.springframework.security> 
 			<org.springframework.version>2.5.6</org.springframework.version> -->
 		<org.yaml.version>1.25</org.yaml.version>
-        <postgresql.driver.version>42.2.8</postgresql.driver.version>
+		<postgresql.driver.version>42.2.8</postgresql.driver.version>
 	</properties>
 
 	<reporting>
 		<plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-project-info-reports-plugin</artifactId>
-            <version>3.0.0</version>
-            <reportSets>
-                <reportSet>
-                    <reports>
-                        <report>index</report>
-                        <report>licenses</report>
-                        <report>dependency-info</report>
-                    </reports>
-                </reportSet>
-            </reportSets>
-        </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>3.0.0</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>index</report>
+							<report>licenses</report>
+							<report>dependency-info</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
@@ -242,14 +249,14 @@
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.7.1</version>
 			</plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M3</version>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
 				<configuration>
 					<skip>false</skip>
 				</configuration>
-        </plugin>
+			</plugin>
 			<plugin>
 				<!-- mvn failsafe:integration-test -->
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -269,8 +276,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0.2</version>
 				<configuration>
-					<source>1.12</source>
-					<target>1.12</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
