on my way to javautil-jcmdline

--- a/javautil-7/javautil-pom/pom.xml
+++ b/javautil-7/javautil-pom/pom.xml
@@ -13,7 +13,7 @@
 	<url>http://maven.apache.org</url>
 
 	<modules>
-		<module>../javautil-commandline</module>
+		<module>../javautil-jcmdline</module>
 		<module>../javautil-core</module>
 		<module>../javautil-hibernate</module>
 		<module>../javautil-joblog</module>
