--- a/javautil-7/javautil-condition-identification/pom.xml
+++ b/javautil-7/javautil-condition-identification/pom.xml
@@ -115,12 +115,19 @@
 			<version>${HikariCP.version}</version>
 			<scope>compile</scope>
 		</dependency>
-
+<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.1</version>
+    <!--  <scope>provided</scope> -->
+</dependency>
 		<!-- TODO unify across projects -->
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>oracle-jdbc8</artifactId>
 			<version>19</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
