--- a/javautil-7/vending-sales-reporting/.classpath
+++ b/javautil-7/vending-sales-reporting/.classpath
@@ -46,7 +46,7 @@
 	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-annotations/2.10.1/jackson-annotations-2.10.1.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-annotations/2.10.1/jackson-annotations-2.10.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.10.1/jackson-core-2.10.1.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.10.1/jackson-core-2.10.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/dataformat/jackson-dataformat-yaml/2.10.1/jackson-dataformat-yaml-2.10.1.jar" sourcepath="M2_REPO/com/fasterxml/jackson/dataformat/jackson-dataformat-yaml/2.10.1/jackson-dataformat-yaml-2.10.1-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/yaml/snakeyaml/1.5/snakeyaml-1.5.jar" sourcepath="M2_REPO/org/yaml/snakeyaml/1.5/snakeyaml-1.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/yaml/snakeyaml/1.26/snakeyaml-1.26.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.6.2/gson-2.6.2.jar" sourcepath="M2_REPO/com/google/code/gson/gson/2.6.2/gson-2.6.2-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01.jar" sourcepath="M2_REPO/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/zaxxer/HikariCP/3.1.0/HikariCP-3.1.0.jar" sourcepath="M2_REPO/com/zaxxer/HikariCP/3.1.0/HikariCP-3.1.0-sources.jar"/>
@@ -68,7 +68,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1.jar" sourcepath="M2_REPO/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar" sourcepath="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/javautil/javautil-condition-identification/8.6.21/javautil-condition-identification-8.6.21.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/oracle/oracle-jdbc8/19/oracle-jdbc8-19.jar"/>
 	<classpathentry kind="var" path="M2_REPO/junit/junit/4.8.1/junit-4.8.1.jar" sourcepath="M2_REPO/junit/junit/4.8.1/junit-4.8.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/postgresql/postgresql/42.2.1/postgresql-42.2.1.jar" sourcepath="M2_REPO/org/postgresql/postgresql/42.2.1/postgresql-42.2.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/xerial/sqlite-jdbc/3.18.0/sqlite-jdbc-3.18.0.jar" sourcepath="M2_REPO/org/xerial/sqlite-jdbc/3.18.0/sqlite-jdbc-3.18.0-sources.jar"/>
