--- a/javautil-7/javautil-jcmdline/md/WorkbookWriterArguments.properties
+++ b/javautil-7/javautil-jcmdline/md/WorkbookWriterArguments.properties
@@ -1,4 +1,5 @@
 application.name=WorkbookWriter
 application.HelpText=Creates Excel workbook
 datasourceName.description=JNDI or connections.yaml datasource name
-
+definition.description=Workbook definition .yaml file
+outfile.description=The name of the file to be created
