jcmdline cleanup of cruft and doc

--- a/javautil-7/javautil-jcmdline/src/main/java/jcmdline/strings.properties
+++ b/javautil-7/javautil-jcmdline/src/main/java/jcmdline/strings.properties
@@ -36,58 +36,58 @@
 # AbstractParameter messages
 #------------------------------------------------------------------------------
 
-AbstractParameter.descTooShort: \
+AbstractParameter.descTooShort= \
     Description for {0} must be at least 5 characters.
-AbstractParameter.emptyTag: A tag may not be an empty string.
-AbstractParameter.illegalCharInTag: \
+AbstractParameter.emptyTag= A tag may not be an empty string.
+AbstractParameter.illegalCharInTag= \
     Parameter tag <{0}> contains illegal character <{1}>.\n\
     Valid characters are letters, numbers, '_', and '-'.
-AbstractParameter.specifiedMoreThanOnce: \
+AbstractParameter.specifiedMoreThanOnce= \
     <{0}> may only be specified once.
-Parameter.valNotAcceptableVal: \
+Parameter.valNotAcceptableVal= \
     Invalid value "{0}" specified for <{1}>, expecting one of: {2}
 
 #------------------------------------------------------------------------------
 # BasicCmdLineHandler messages
 #------------------------------------------------------------------------------
 
-BasicCmdLineHandler.cmdDescTooShort: Command description must be specified.
-BasicCmdLineHandler.cmdNameTooShort: Command name must be specified.
-BasicCmdLineHandler.duplicateOption: An option ({0}) is defined more than once.
-BasicCmdLineHandler.missingRequiredArg: \
+BasicCmdLineHandler.cmdDescTooShort= Command description must be specified.
+BasicCmdLineHandler.cmdNameTooShort= Command name must be specified.
+BasicCmdLineHandler.duplicateOption= An option ({0}) is defined more than once.
+BasicCmdLineHandler.missingRequiredArg= \
     Required argument <{0}> has not been specified.
-BasicCmdLineHandler.missingRequiredOpt: \
+BasicCmdLineHandler.missingRequiredOpt= \
     Required option <{0}> has not been specified.
-BasicCmdLineHandler.multiValueArgNotLast: \
+BasicCmdLineHandler.multiValueArgNotLast= \
     Multi-valued argument <{0}> must be the last specified because it will \
     absorb all command line parameters.
-BasicCmdLineHandler.nullArgNotAllowed: Argument parameter may not be null.
-BasicCmdLineHandler.requiredArgAfterOptArg: \
+BasicCmdLineHandler.nullArgNotAllowed= Argument parameter may not be null.
+BasicCmdLineHandler.requiredArgAfterOptArg= \
     Required argument ({0}) may not be specified after optional argument ({1}).
 
 #------------------------------------------------------------------------------
 # BooleanParam messages
 #------------------------------------------------------------------------------
 
-BooleanParam.false: false
-BooleanParam.setValueProgError: \
+BooleanParam.false= false
+BooleanParam.setValueProgError= \
     Programming error: can't set BooleanParam value to "false".
-BooleanParam.true: true
+BooleanParam.true= true
 
 #------------------------------------------------------------------------------
 # DateParam messages
 #------------------------------------------------------------------------------
 
-DateParam.dateFormat: MM/dd/yy
-DateParam.invalidDate: \
+DateParam.dateFormat= MM/dd/yy
+DateParam.invalidDate= \
     Invalid date specified for <{0}>, expecting {1}
-DateParam.invalidHours: \
+DateParam.invalidHours= \
     Invalid hours value specified ({0}) must be between 0 and 23, inclusive.
-DateParam.invalidMinutes: \
+DateParam.invalidMinutes= \
     Invalid minutes value specified ({0}) must be between 0 and 59, inclusive.
-DateParam.invalidSeconds: \
+DateParam.invalidSeconds= \
     Invalid seconds value specified ({0}) must be between 0 and 59, inclusive.
-DateParam.invalidMilliSeconds: \
+DateParam.invalidMilliSeconds= \
     Invalid milliseconds value specified ({0}) must be between 0 and 999, \
     inclusive.
 
@@ -95,44 +95,44 @@ DateParam.invalidMilliSeconds: \
 # DateTimeParam messages
 #------------------------------------------------------------------------------
 
-DateTimeParam.dateFormat: MM/dd/yy
-DateTimeParam.invalidDate: \
+DateTimeParam.dateFormat= MM/dd/yy
+DateTimeParam.invalidDate= \
     Invalid date specified for <{0}>, expecting {1}
 
 #------------------------------------------------------------------------------
 # DefaultCmdLineHandler messages
 #------------------------------------------------------------------------------
 
-DefaultCmdLineHandler.logOptTag: log
-DefaultCmdLineHandler.logOptDesc: sets the log level
-DefaultCmdLineHandler.helpOptTag: help
-DefaultCmdLineHandler.helpOptDesc: prints help information to stdout; exits
-DefaultCmdLineHandler.versionOptTag: version
-DefaultCmdLineHandler.versionOptDesc: prints program version to stdout; exits
-DefaultCmdLineHandler.usageOptTag1: h
-DefaultCmdLineHandler.usageOptTag2: ?
-DefaultCmdLineHandler.usageOptDesc: prints usage to stdout; exits
-DefaultCmdLineHandler.hiddenUsageOptTag: h!
-DefaultCmdLineHandler.hiddenUsageOptDesc: \
+DefaultCmdLineHandler.logOptTag= log
+DefaultCmdLineHandler.logOptDesc= sets the log level
+DefaultCmdLineHandler.helpOptTag= help
+DefaultCmdLineHandler.helpOptDesc= prints help information to stdout; exits
+DefaultCmdLineHandler.versionOptTag= version
+DefaultCmdLineHandler.versionOptDesc= prints program version to stdout; exits
+DefaultCmdLineHandler.usageOptTag1= h
+DefaultCmdLineHandler.usageOptTag2= ?
+DefaultCmdLineHandler.usageOptDesc= prints usage to stdout; exits
+DefaultCmdLineHandler.hiddenUsageOptTag= h!
+DefaultCmdLineHandler.hiddenUsageOptDesc= \
     prints usage (including hidden options) to stdout; exits
-DefaultCmdLineHandler.params: , params:
-DefaultCmdLineHandler.classDescTooShort: \
+DefaultCmdLineHandler.params= , params:
+DefaultCmdLineHandler.classDescTooShort= \
     Invalid class description passed to DefaultCmdLineHandler constructor, \n\
     must be at least 1 character long.
-DefaultCmdLineHandler.classNameTooShort: \
+DefaultCmdLineHandler.classNameTooShort= \
     Invalid class name passed to DefaultCmdLineHandler constructor, must be at \
     \nleast 1 character long.
-DefaultCmdLineHandler.helpMissingArg: \
+DefaultCmdLineHandler.helpMissingArg= \
     Help text contains no reference to the <{0}> argument.  Help text:\n\
     {1}
-DefaultCmdLineHandler.helpMissingOption: \
+DefaultCmdLineHandler.helpMissingOption= \
     Help text contains no reference to the <{0}> option.  Help text:\n\
     {1}
-DefaultCmdLineHandler.helpTooShort: \
+DefaultCmdLineHandler.helpTooShort= \
     Invalid help text passed to DefaultCmdLineHandler constructor, must be at \n\
     least 1 character long.
-DefaultCmdLineHandler.optionError: {0}
-DefaultCmdLineHandler.versionTooShort: \
+DefaultCmdLineHandler.optionError= {0}
+DefaultCmdLineHandler.versionTooShort= \
     Invalid version passed to DefaultCmdLineHandler constructor, must be at \n\
     least 1 character long.
 
@@ -140,133 +140,133 @@ DefaultCmdLineHandler.versionTooShort: \
 # FileParam messages
 #------------------------------------------------------------------------------
 
-FileParam.a: a
-FileParam.an_existing: an existing
-FileParam.defaultDirOptionLabel: <dir>
-FileParam.defaultFileOptionLabel: <f>
-FileParam.directory: directory
-FileParam.file: file
-FileParam.file_dir: file or directory
-FileParam.illegalValue: \
+FileParam.a= a
+FileParam.an_existing= an existing
+FileParam.defaultDirOptionLabel= <dir>
+FileParam.defaultFileOptionLabel= <f>
+FileParam.directory= directory
+FileParam.file= file
+FileParam.file_dir= file or directory
+FileParam.illegalValue= \
     Invalid name ({3}) specified for <{4}>, must be {0}{2} {1}.
-FileParam.invalidAttributes: \
+FileParam.invalidAttributes= \
     Invalid attributes specified: <{0}>, please use static final literals.
-FileParam.readable: , readable,
-FileParam.readable_writeable: , readable, writeable,
-FileParam.valueNotSet: There is no value set for <{0}>.
-FileParam.writeable: , writeable,
+FileParam.readable= , readable,
+FileParam.readable_writeable= , readable, writeable,
+FileParam.valueNotSet= There is no value set for <{0}>.
+FileParam.writeable= , writeable,
 
 #------------------------------------------------------------------------------
 # HelpCmdLineHandler messages
 #------------------------------------------------------------------------------
 
-HelpCmdLineHandler.help.tag: help
-HelpCmdLineHandler.help.desc: displays verbose help information
-HelpCmdLineHandler.helpEmptyError: \
+HelpCmdLineHandler.help.tag= help
+HelpCmdLineHandler.help.desc= displays verbose help information
+HelpCmdLineHandler.helpEmptyError= \
     a non-empty help text must be specified to the HelpCmdLineHandler constructor
-HelpCmdLineHandler.helpHidden.tag: help!
-HelpCmdLineHandler.helpHidden.desc: \
+HelpCmdLineHandler.helpHidden.tag= help!
+HelpCmdLineHandler.helpHidden.desc= \
     displays verbose help information, including hidden parameters
 
 #------------------------------------------------------------------------------
 # IntParam messages
 #------------------------------------------------------------------------------
 
-IntParam.defaultOptionLabel: <n>
+IntParam.defaultOptionLabel= <n>
 
-IntParam.maxLessThanMin: \
+IntParam.maxLessThanMin= \
 Minimum acceptable value ({0}) must not be greater than the maximum ({1})
 
-IntParam.validValues: \
+IntParam.validValues= \
 The value for <{0}> must be a number between {1} and {2}, inclusive.
 
-IntParam.valueNotSet: \
+IntParam.valueNotSet= \
 There is no value set for <{0}>.
 
 #------------------------------------------------------------------------------
 # LoggerCmdLineHandler messages
 #------------------------------------------------------------------------------
 
-LoggerCmdLineHandler.logFormatterNullError: \
+LoggerCmdLineHandler.logFormatterNullError= \
     The Formatter passed to setlogFormatter() must not be null
-LoggerCmdLineHandler.logOpt.tag: log
-LoggerCmdLineHandler.logOpt.desc: \
+LoggerCmdLineHandler.logOpt.tag= log
+LoggerCmdLineHandler.logOpt.desc= \
     set the default logging level \
     (one of {0}, {1}, {2}, {3}, {4}, {5}, {6}, {7}, or {8})
-LoggerCmdLineHandler.streamNullError: \
+LoggerCmdLineHandler.streamNullError= \
     The stream specified to the LoggerCmdLineHandler may not be null.
 
 #------------------------------------------------------------------------------
 # PosixCmdLineParser messages
 #------------------------------------------------------------------------------
 
-PosixCmdLineParser.ambiguousOption: Option <{0}> is ambiguous.
-PosixCmdLineParser.extraArg: Extra argument specified: <{0}>
-PosixCmdLineParser.invalidOption: Option <{0}> is not a valid option.
-PosixCmdLineParser.missingOptionValue: Option <{0}> requires a value.
-PosixCmdLineParser.optionNoTag: Option "-" is invalid.
+PosixCmdLineParser.ambiguousOption= Option <{0}> is ambiguous.
+PosixCmdLineParser.extraArg= Extra argument specified: <{0}>
+PosixCmdLineParser.invalidOption= Option <{0}> is not a valid option.
+PosixCmdLineParser.missingOptionValue= Option <{0}> requires a value.
+PosixCmdLineParser.optionNoTag= Option "-" is invalid.
 
 #------------------------------------------------------------------------------
 # StringFormatHelper messages
 #------------------------------------------------------------------------------
 
-StringFormatHelper.labelDescriptionError: \
+StringFormatHelper.labelDescriptionError= \
     The number of labels ({0}) passed to formatLabelledList does not match \
     the number of descriptions ({1})
-StringFormatHelper.lineLenLessThanIndent: \
+StringFormatHelper.lineLenLessThanIndent= \
     maximum line length must be greater than indent
-StringFormatHelper.lineLenZero: maximum line length must be greater than 0
+StringFormatHelper.lineLenZero= maximum line length must be greater than 0
 
 #------------------------------------------------------------------------------
 # StringParam messages
 #------------------------------------------------------------------------------
 
-StringParam.defaultOptionLabel: <s>
-StringParam.maxTooSmall: Maximum length for {0} must not be less than 0.
-StringParam.minTooSmall: Minimum length for {0} must not be less than 0.
-StringParam.maxLessThanMin: \
+StringParam.defaultOptionLabel= <s>
+StringParam.maxTooSmall= Maximum length for {0} must not be less than 0.
+StringParam.minTooSmall= Minimum length for {0} must not be less than 0.
+StringParam.maxLessThanMin= \
     Maximum length for {0} must not be less than the minimum length.
-StringParam.valTooLong: \
+StringParam.valTooLong= \
     Parameter for {0}  is longer than the maximum allowed length ({1}).
-StringParam.valTooShort: \
+StringParam.valTooShort= \
     Parameter for {0}  is shorter than the minimum allowed length ({1}).
 
 #------------------------------------------------------------------------------
 # Strings messages
 #------------------------------------------------------------------------------
 
-Strings.missingKey: Missing string property for key:
+Strings.missingKey= Missing string property for key:
 
 #------------------------------------------------------------------------------
 # TextUsageFormatter messages
 #------------------------------------------------------------------------------
 
-TextUsageFormatter.errorPrefix: ERROR:
-TextUsageFormatter.hidden: hidden
-TextUsageFormatter.optional: optional
-TextUsageFormatter.optIntroNoArgs: where options are:
-TextUsageFormatter.optIntroWArgs: and options are:
-TextUsageFormatter.required: required
-TextUsageFormatter.stdOptionHelp: \
+TextUsageFormatter.errorPrefix= ERROR:
+TextUsageFormatter.hidden= hidden
+TextUsageFormatter.optional= optional
+TextUsageFormatter.optIntroNoArgs= where options are:
+TextUsageFormatter.optIntroWArgs= and options are:
+TextUsageFormatter.required= required
+TextUsageFormatter.stdOptionHelp= \
     Option tags are not case sensitive, and \
     may be truncated as long as they remain unambiguous.  Option \
     tags must be separated from their corresponding values by \
     whitespace, or by an equal sign.  Boolean options (options that \
     require no associated value) may be specified alone (=true), or as \
     'tag=value' where value is 'true' or 'false'.
-TextUsageFormatter.usage: Usage:
-TextUsageFormatter.usageWOReqOpt: [options]
-TextUsageFormatter.usageWReqOpt: options
-TextUsageFormatter.where: where:
+TextUsageFormatter.usage= Usage:
+TextUsageFormatter.usageWOReqOpt= [options]
+TextUsageFormatter.usageWReqOpt= options
+TextUsageFormatter.where= where:
 
 #------------------------------------------------------------------------------
 # TimeParam messages
 #------------------------------------------------------------------------------
 
-TimeParam.invalidTimeFormat: Invalid time format ({0}), expecting "{1}"
-TimeParam.invalidSeconds: \
+TimeParam.invalidTimeFormat= Invalid time format ({0}), expecting "{1}"
+TimeParam.invalidSeconds= \
     Invalid seconds value specified ({0}) must be between 0 and 59, inclusive.
-TimeParam.invalidMilliSeconds: \
+TimeParam.invalidMilliSeconds= \
     Invalid milliseconds value specified ({0}) must be between 0 and 999, \
     inclusive.
 
@@ -274,8 +274,8 @@ TimeParam.invalidMilliSeconds: \
 # VersionCmdLineHandler messages
 #------------------------------------------------------------------------------
 
-VersionCmdLineHandler.version.desc: displays command's version
-VersionCmdLineHandler.version.tag: version
-VersionCmdLineHandler.versionEmptyError: \
+VersionCmdLineHandler.version.desc= displays command's version
+VersionCmdLineHandler.version.tag= version
+VersionCmdLineHandler.versionEmptyError= \
     A version of non-zero length must be specified.
 
