--- a/javautil-7/javautil-jcmdline/pom.xml
+++ b/javautil-7/javautil-jcmdline/pom.xml
@@ -4,24 +4,33 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<groupId>org.javautil</groupId>
 	<artifactId>javautil-jcmdline</artifactId>
+	<version>8.07.04</version>
 	<packaging>jar</packaging>
 
-	<name>javautil-commandline</name>
+	<name>javautil-jcmdline</name>
 	<description>Support for declarative command line processing using annotated argument beahs.</description>
 	<url>http://maven.apache.org</url>
 
-	<parent>
-		<artifactId>javautil-pom</artifactId>
-		<groupId>org.javautil</groupId>
-		<version>8.07.04</version>
-		<relativePath>../javautil-pom</relativePath>
-	</parent>
+	<!-- <parent> <artifactId>javautil-pom</artifactId> <groupId>org.javautil</groupId> 
+		<version>8.07.04</version> <relativePath>../javautil-pom</relativePath> </parent> -->
+	<properties>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+
+		<commons.configuration.version>1.10</commons.configuration.version>
+		<org.slf4j.version>1.7.28</org.slf4j.version>
+		<org.apache.commons-lang3.version>3.10</org.apache.commons-lang3.version>
+		<log4j.version>1.2.17</log4j.version>
+		<junit.version>4.12</junit.version>
+	</properties>
 
 	<organization>
 		<name>org.javautil</name>
 		<url>http://javautil.org</url> <!-- fix -->
 	</organization>
+
 	<dependencies>
 		<!-- logging -->
 		<dependency>
@@ -49,16 +58,23 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>${org.apache.commons-lang3.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-<build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M5</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M5</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
